parser/cminus_parser.go
// Code generated from CMINUS.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // CMINUS

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'if'", "'else'", "'int'", "'void'", "'return'", "'while'", "'='",
	"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'",
	"'['", "']'", "'('", "')'", "';'", "','", "'{'", "'}'",
}
var symbolicNames = []string{
	"", "IF", "ELSE", "INT", "VOID", "RETURN", "WHILE", "ASSIGN", "EQUAL",
	"DIFFERENT", "SMALLER", "LARGER", "SMALLERANDEQUAL", "LARGERANDEQUAL",
	"PLUS", "MINUS", "TIMES", "DIVISION", "LBRACKET", "RBRACKET", "LPARENT",
	"RPARENT", "SEMICOLON", "COMMA", "LKEY", "RKEY", "NUMBER", "IDENTIFIER",
	"WHITESPACE", "COMMENT",
}

var ruleNames = []string{
	"program", "declarationList", "declaration", "varDeclaration", "funDeclaration",
	"params", "paramList", "param", "compoundDecl", "localDeclarations", "statementList",
	"statement", "expressionDecl", "selectionDecl", "iteratorDecl", "returnDecl",
	"expression", "vari", "simpleExpression", "relational", "sumExpression",
	"sum", "term", "mult", "factor", "activation", "argList", "ident", "num",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type CMINUSParser struct {
	*antlr.BaseParser
}

func NewCMINUSParser(input antlr.TokenStream) *CMINUSParser {
	this := new(CMINUSParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "CMINUS.g4"

	return this
}

// CMINUSParser tokens.
const (
	CMINUSParserEOF             = antlr.TokenEOF
	CMINUSParserIF              = 1
	CMINUSParserELSE            = 2
	CMINUSParserINT             = 3
	CMINUSParserVOID            = 4
	CMINUSParserRETURN          = 5
	CMINUSParserWHILE           = 6
	CMINUSParserASSIGN          = 7
	CMINUSParserEQUAL           = 8
	CMINUSParserDIFFERENT       = 9
	CMINUSParserSMALLER         = 10
	CMINUSParserLARGER          = 11
	CMINUSParserSMALLERANDEQUAL = 12
	CMINUSParserLARGERANDEQUAL  = 13
	CMINUSParserPLUS            = 14
	CMINUSParserMINUS           = 15
	CMINUSParserTIMES           = 16
	CMINUSParserDIVISION        = 17
	CMINUSParserLBRACKET        = 18
	CMINUSParserRBRACKET        = 19
	CMINUSParserLPARENT         = 20
	CMINUSParserRPARENT         = 21
	CMINUSParserSEMICOLON       = 22
	CMINUSParserCOMMA           = 23
	CMINUSParserLKEY            = 24
	CMINUSParserRKEY            = 25
	CMINUSParserNUMBER          = 26
	CMINUSParserIDENTIFIER      = 27
	CMINUSParserWHITESPACE      = 28
	CMINUSParserCOMMENT         = 29
)

// CMINUSParser rules.
const (
	CMINUSParserRULE_program           = 0
	CMINUSParserRULE_declarationList   = 1
	CMINUSParserRULE_declaration       = 2
	CMINUSParserRULE_varDeclaration    = 3
	CMINUSParserRULE_funDeclaration    = 4
	CMINUSParserRULE_params            = 5
	CMINUSParserRULE_paramList         = 6
	CMINUSParserRULE_param             = 7
	CMINUSParserRULE_compoundDecl      = 8
	CMINUSParserRULE_localDeclarations = 9
	CMINUSParserRULE_statementList     = 10
	CMINUSParserRULE_statement         = 11
	CMINUSParserRULE_expressionDecl    = 12
	CMINUSParserRULE_selectionDecl     = 13
	CMINUSParserRULE_iteratorDecl      = 14
	CMINUSParserRULE_returnDecl        = 15
	CMINUSParserRULE_expression        = 16
	CMINUSParserRULE_vari              = 17
	CMINUSParserRULE_simpleExpression  = 18
	CMINUSParserRULE_relational        = 19
	CMINUSParserRULE_sumExpression     = 20
	CMINUSParserRULE_sum               = 21
	CMINUSParserRULE_term              = 22
	CMINUSParserRULE_mult              = 23
	CMINUSParserRULE_factor            = 24
	CMINUSParserRULE_activation        = 25
	CMINUSParserRULE_argList           = 26
	CMINUSParserRULE_ident             = 27
	CMINUSParserRULE_num               = 28
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CMINUSParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CMINUSParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) DeclarationList() IDeclarationListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclarationListContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CMINUSVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CMINUSParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CMINUSParserRULE_program)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.declarationList(0)
	}

	return localctx
}

// IDeclarationListContext is an interface to support dynamic dispatch.
type IDeclarationListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclarationListContext differentiates from other interfaces.
	IsDeclarationListContext()
}

type DeclarationListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationListContext() *DeclarationListContext {
	var p = new(DeclarationListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CMINUSParserRULE_declarationList
	return p
}

func (*DeclarationListContext) IsDeclarationListContext() {}

func NewDeclarationListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationListContext {
	var p = new(DeclarationListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CMINUSParserRULE_declarationList

	return p
}

func (s *DeclarationListContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationListContext) Declaration() IDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *DeclarationListContext) DeclarationList() IDeclarationListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclarationListContext)
}

func (s *DeclarationListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.EnterDeclarationList(s)
	}
}

func (s *DeclarationListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.ExitDeclarationList(s)
	}
}

func (s *DeclarationListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CMINUSVisitor:
		return t.VisitDeclarationList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CMINUSParser) DeclarationList() (localctx IDeclarationListContext) {
	return p.declarationList(0)
}

func (p *CMINUSParser) declarationList(_p int) (localctx IDeclarationListContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewDeclarationListContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IDeclarationListContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 2
	p.EnterRecursionRule(localctx, 2, CMINUSParserRULE_declarationList, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(61)
		p.Declaration()
	}

	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			localctx = NewDeclarationListContext(p, _parentctx, _parentState)
			p.PushNewRecursionContext(localctx, _startState, CMINUSParserRULE_declarationList)
			p.SetState(63)

			if !(p.Precpred(p.GetParserRuleContext(), 2)) {
				panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
			}
			{
				p.SetState(64)
				p.Declaration()
			}

		}
		p.SetState(69)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}

	return localctx
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CMINUSParserRULE_declaration
	return p
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CMINUSParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) VarDeclaration() IVarDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVarDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVarDeclarationContext)
}

func (s *DeclarationContext) FunDeclaration() IFunDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunDeclarationContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.EnterDeclaration(s)
	}
}

func (s *DeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.ExitDeclaration(s)
	}
}

func (s *DeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CMINUSVisitor:
		return t.VisitDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CMINUSParser) Declaration() (localctx IDeclarationContext) {
	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CMINUSParserRULE_declaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(72)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(70)
			p.VarDeclaration()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(71)
			p.FunDeclaration()
		}

	}

	return localctx
}

// IVarDeclarationContext is an interface to support dynamic dispatch.
type IVarDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVarDeclarationContext differentiates from other interfaces.
	IsVarDeclarationContext()
}

type VarDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVarDeclarationContext() *VarDeclarationContext {
	var p = new(VarDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CMINUSParserRULE_varDeclaration
	return p
}

func (*VarDeclarationContext) IsVarDeclarationContext() {}

func NewVarDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VarDeclarationContext {
	var p = new(VarDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CMINUSParserRULE_varDeclaration

	return p
}

func (s *VarDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *VarDeclarationContext) INT() antlr.TerminalNode {
	return s.GetToken(CMINUSParserINT, 0)
}

func (s *VarDeclarationContext) Ident() IIdentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdentContext)
}

func (s *VarDeclarationContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(CMINUSParserSEMICOLON, 0)
}

func (s *VarDeclarationContext) LBRACKET() antlr.TerminalNode {
	return s.GetToken(CMINUSParserLBRACKET, 0)
}

func (s *VarDeclarationContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(CMINUSParserNUMBER, 0)
}

func (s *VarDeclarationContext) RBRACKET() antlr.TerminalNode {
	return s.GetToken(CMINUSParserRBRACKET, 0)
}

func (s *VarDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VarDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VarDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.EnterVarDeclaration(s)
	}
}

func (s *VarDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.ExitVarDeclaration(s)
	}
}

func (s *VarDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CMINUSVisitor:
		return t.VisitVarDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CMINUSParser) VarDeclaration() (localctx IVarDeclarationContext) {
	localctx = NewVarDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, CMINUSParserRULE_varDeclaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(85)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(74)
			p.Match(CMINUSParserINT)
		}
		{
			p.SetState(75)
			p.Ident()
		}
		{
			p.SetState(76)
			p.Match(CMINUSParserSEMICOLON)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(78)
			p.Match(CMINUSParserINT)
		}
		{
			p.SetState(79)
			p.Ident()
		}
		{
			p.SetState(80)
			p.Match(CMINUSParserLBRACKET)
		}
		{
			p.SetState(81)
			p.Match(CMINUSParserNUMBER)
		}
		{
			p.SetState(82)
			p.Match(CMINUSParserRBRACKET)
		}
		{
			p.SetState(83)
			p.Match(CMINUSParserSEMICOLON)
		}

	}

	return localctx
}

// IFunDeclarationContext is an interface to support dynamic dispatch.
type IFunDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFunDeclarationContext differentiates from other interfaces.
	IsFunDeclarationContext()
}

type FunDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunDeclarationContext() *FunDeclarationContext {
	var p = new(FunDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CMINUSParserRULE_funDeclaration
	return p
}

func (*FunDeclarationContext) IsFunDeclarationContext() {}

func NewFunDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunDeclarationContext {
	var p = new(FunDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CMINUSParserRULE_funDeclaration

	return p
}

func (s *FunDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *FunDeclarationContext) INT() antlr.TerminalNode {
	return s.GetToken(CMINUSParserINT, 0)
}

func (s *FunDeclarationContext) Ident() IIdentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdentContext)
}

func (s *FunDeclarationContext) LPARENT() antlr.TerminalNode {
	return s.GetToken(CMINUSParserLPARENT, 0)
}

func (s *FunDeclarationContext) Params() IParamsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParamsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IParamsContext)
}

func (s *FunDeclarationContext) RPARENT() antlr.TerminalNode {
	return s.GetToken(CMINUSParserRPARENT, 0)
}

func (s *FunDeclarationContext) CompoundDecl() ICompoundDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICompoundDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICompoundDeclContext)
}

func (s *FunDeclarationContext) VOID() antlr.TerminalNode {
	return s.GetToken(CMINUSParserVOID, 0)
}

func (s *FunDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.EnterFunDeclaration(s)
	}
}

func (s *FunDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.ExitFunDeclaration(s)
	}
}

func (s *FunDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CMINUSVisitor:
		return t.VisitFunDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CMINUSParser) FunDeclaration() (localctx IFunDeclarationContext) {
	localctx = NewFunDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, CMINUSParserRULE_funDeclaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(101)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case CMINUSParserINT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(87)
			p.Match(CMINUSParserINT)
		}
		{
			p.SetState(88)
			p.Ident()
		}
		{
			p.SetState(89)
			p.Match(CMINUSParserLPARENT)
		}
		{
			p.SetState(90)
			p.Params()
		}
		{
			p.SetState(91)
			p.Match(CMINUSParserRPARENT)
		}
		{
			p.SetState(92)
			p.CompoundDecl()
		}

	case CMINUSParserVOID:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(94)
			p.Match(CMINUSParserVOID)
		}
		{
			p.SetState(95)
			p.Ident()
		}
		{
			p.SetState(96)
			p.Match(CMINUSParserLPARENT)
		}
		{
			p.SetState(97)
			p.Params()
		}
		{
			p.SetState(98)
			p.Match(CMINUSParserRPARENT)
		}
		{
			p.SetState(99)
			p.CompoundDecl()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IParamsContext is an interface to support dynamic dispatch.
type IParamsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParamsContext differentiates from other interfaces.
	IsParamsContext()
}

type ParamsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParamsContext() *ParamsContext {
	var p = new(ParamsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CMINUSParserRULE_params
	return p
}

func (*ParamsContext) IsParamsContext() {}

func NewParamsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParamsContext {
	var p = new(ParamsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CMINUSParserRULE_params

	return p
}

func (s *ParamsContext) GetParser() antlr.Parser { return s.parser }

func (s *ParamsContext) ParamList() IParamListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParamListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IParamListContext)
}

func (s *ParamsContext) VOID() antlr.TerminalNode {
	return s.GetToken(CMINUSParserVOID, 0)
}

func (s *ParamsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParamsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParamsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.EnterParams(s)
	}
}

func (s *ParamsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CMINUSListener); ok {
		listenerT.ExitParams(s)
	}
}

func (s *ParamsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CMINUSVisitor:
		return t.VisitParams(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CMINUSParser) Params() (localctx IParamsContext) {
	localctx = NewParamsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, CMINUSParserRULE_params)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(105)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case CMINUSParserINT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(103)
			p.paramList(0)
		}

	case CMINUSParserVOID:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(104)
			p.Match(CMINUSParserVOID)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IParamListContext is an interface to support dynamic dispatch.
type IParamListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParamListContext differentiates from other interfaces.
	IsParamListContext()
}

type ParamListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParamListContext() *ParamListContext {
	var p = new(ParamListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CMINUSParserRULE_paramList
	return p
}

func (*ParamListContext) IsParamListContext() {}

func NewParamListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParamListContext {
	var p = new(ParamListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)
